--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "csvtojson": "^2.0.10",
+    "dotenv": "^16.0.3",
     "elasticsearch": "^16.7.3",
     "express": "^4.17.3",
     "file-type": "^18.0.0",
     "geoip-lite": "^1.4.6",
     "get-json": "^1.0.1",
-    "nodemon": "^2.0.15",
+    "jsonwebtoken": "^9.0.0",
+    "nodemon": "^2.0.20",
     "oracledb": "^5.5.0",
     "typescript": "^4.9.4"
   },
