--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "geoip-lite": "^1.4.6",
     "get-json": "^1.0.1",
     "jsonwebtoken": "^9.0.0",
+    "mysql": "^2.10.2",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
+    "objection": "^3.0.1",
     "oracledb": "^5.5.0",
     "otp-generator": "^4.0.0",
     "typescript": "^4.9.4"
